@@ -1,5 +1,6 @@
 1.6.8 
 ---
+- fixed bug #662903 ilBlit result incorrect when source is not (0,0)
 - internal clamp functions now are macros
 - ilSetAlpha now returns a boolean value since it can fail
 - fixed an error in the configure script were breaking compilation if libpng-config wasn't in the path
